     * Allow ovn-controller SSL configuration to be obtained from vswitchd
       database.
     * ovn-trace now has basic support for tracing distributed firewalls.
     * In ovn-nbctl and ovn-sbctl, record UUIDs in commands may now be
       abbreviated to 4 hex digits.
   - Add the command 'ovs-appctl stp/show' (see ovs-vswitchd(8)).
   - OpenFlow:
     * Increased support for OpenFlow 1.6 (draft).
     * Bundles now support hashing by just nw_src or nw_dst.
     * The "learn" action now supports a "limit" option (see ovs-ofctl(8)).
     * The port status bit OFPPS_LIVE now reflects link aliveness.

v2.7.0 - 21 Feb 2017
---------------------
   - Utilities and daemons that support SSL now allow protocols and
     ciphers to be configured with --ssl-protocols and --ssl-ciphers.
   - OVN:
     * QoS is now implemented via egress shaping rather than ingress policing.
     * DSCP marking is now supported, via the new northbound QoS table.
     * IPAM now supports fixed MAC addresses.
     * Support for source IP address based routing.
     * ovn-trace:
       - New --ovs option to also print OpenFlow flows.
       - put_dhcp_opts and put_dhcp_optsv6 actions may now be traced.
     * Support for managing SSL and remote connection configuration in
       northbound and southbound databases.
     * TCP connections to northbound and southbound databases are no
       longer enabled by default and must be explicitly configured.
       See documentation for ovn-sbctl/ovn-nbctl "set-connection"
       command or the ovn-ctl "--db-sb-create-insecure-remote" and
       "--db-nb-create-insecure-remote" command-line options for
       information regarding remote connection configuration.
     * New appctl "inject-pkt" command in ovn-controller that allows
       packets to be injected into the connected OVS instance.
     * Distributed logical routers may now be connected directly to
       logical switches with localnet ports, by specifying a