@@ -858,12 +858,12 @@
       <column name="protocols">
         <p>
           List of OpenFlow protocols that may be used when negotiating
-          a connection with a controller.  OpenFlow 1.0, 1.1, 1.2, and
-          1.3 are enabled by default if this column is empty.
+          a connection with a controller.  OpenFlow 1.0, 1.1, 1.2, 1.3, and
+          1.4 are enabled by default if this column is empty.
         </p>
 
         <p>
-          OpenFlow 1.4, 1.5, and 1.6 are not enabled by default because their
+          OpenFlow 1.5 and 1.6 are not enabled by default because their
           implementations are missing features.  In addition, the OpenFlow 1.6
           specification is still under development and thus subject to change.
         </p>
